<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/upper_vertical_spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="horizontal">

        <View
            android:id="@+id/left_horizontal_spacer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/login_page_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/login_host_tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/LoginInfoItem">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/proto_IPAddress"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlackLight"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember"
                        android:textSize="10sp"/>

                    <CheckBox
                        android:id="@+id/login_remember_host"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/address_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/proto_IPA_example"
                    android:layout_marginTop="-10dp"
                    android:textColorHint="@color/colorPurpleLight" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_port_tile"
                style="@style/LoginInfoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/proto_PortNumber"
                        android:textColor="@color/colorBlackLight"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember"
                        android:textSize="10sp"/>

                    <CheckBox
                        android:id="@+id/login_remember_port"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/port_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:hint="@string/proto_Port_example" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_username_tile"
                style="@style/LoginInfoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/proto_Username"
                        android:textColor="@color/colorBlackLight"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember"
                        android:textSize="10sp"/>

                    <CheckBox
                        android:id="@+id/login_remember_username"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/username_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_password_tile"
                style="@style/LoginInfoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/proto_Password"
                        android:textColor="@color/colorBlackLight"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember"
                        android:textSize="10sp"/>

                    <CheckBox
                        android:id="@+id/login_remember_password"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_buttons_tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/login_button"
                    style="@style/LoginInfoItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/connect" />

                <Button
                    android:id="@+id/disconnect_button"
                    style="@style/LoginInfoItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/disconnect" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:id="@+id/right_horizontal_spacer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <View
        android:id="@+id/lower_verical_spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>