<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_activity_layout">

<!--
The following four views define the structure of the App.
The FrameLayout contains the UI fragment for the action the user is performing.
These actions consist of Login, Client-Browse, and Server-Browse.
The following three ListViews contain logs/info that are persistent between the three actions.
These ListViews display information regarding (Left to Right) Files Selected, Login/Connection
    Status, and Transfer Progress.
-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/connected_status_textview"
        android:textSize="12sp"
        android:background="@color/colorPurpleMidDark"
        android:textColor="@color/colorPurpleLight"
        android:textAlignment="center"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:id="@+id/fragment_container"
        android:visibility="visible">

    </FrameLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:id="@+id/selected_listview"
        android:visibility="gone">

    </ListView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:id="@+id/status_listview"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:id="@+id/progress_listview"
        android:visibility="gone">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/proto_Selected"
            android:id="@+id/selected_button"
            style="@style/InfoBarButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/proto_Status"
            android:id="@+id/status_button"
            style="@style/InfoBarButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/proto_Progress"
            android:id="@+id/progress_button"
            style="@style/InfoBarButton"/>

    </LinearLayout>

</LinearLayout>